# Gaze

./: .gitignore  CMakeLists.txt
include/Gaze/: Function.h  Reading.h  Structure.h  Variable.h
